# rockzombot2

./: Cargo.toml  IrcClient.cs  PingSender.cs  Program.cs  README.md  Zombie.cs  rockzombot2.csproj  rockzombot2.sln
Properties/: AssemblyInfo.cs
src/: main.rs  spotify.rs
