[package]
name = "rockzombot2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "5.0.0"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2.8"
